test/parser/bad/modifiers/private_fields.java
protected class A {
  private int x;
}

